[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository = "https://github.com/servo/mozjs"
version = "0.14.1"
authors = ["The Servo Project Developers"]
build = "build.rs"
edition = "2021"
license = "MPL-2.0"

[build-dependencies]
cc = "1"

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
jitspew = ['mozjs_sys/jitspew']
profilemozjs = ['mozjs_sys/profilemozjs']
uwp = ['mozjs_sys/uwp']

[dependencies]
lazy_static = "1"
libc = "0.2"
log = "0.4"
num-traits = "0.2"
mozjs_sys = { path = "../mozjs" }
